crates/mega-evm/tests/satin/snapshots/satin__detention__a_call_that_reads_counts_from_what_its_caller_paid.snap
---
source: crates/mega-evm/tests/satin/detention.rs
expression: "&views"
---
{
  "value false, gas limit 100000000": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 15117,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 42397
    },
    "result_gas": {
      "total_gas_spent": 42397,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": "unchanged",
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00001": "unchanged",
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "value false, gas limit 300000000": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 15117,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 99972720,
      "floor": 15000,
      "gas_used": 42397
    },
    "result_gas": {
      "total_gas_spent": 42397,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 99972720
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": "unchanged",
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00001": "unchanged",
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "value true, gas limit 100000000": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": [
        {
          "address": "0xfffffffffffffffffffffffffffffffffffffffe",
          "topics": [
            "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
            "0x0000000000000000000000000000000000000000000000000000000000d00001",
            "0x0000000000000000000000000000000000000000000000000000000000bef000"
          ],
          "data": "0x0000000000000000000000000000000000000000000000000000000000000001"
        }
      ]
    },
    "gas": {
      "regular": 21818,
      "state": 0,
      "history": 34320,
      "history_bytes": 390,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 56138
    },
    "result_gas": {
      "total_gas_spent": 56138,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 550,
      "write_records": 2
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": {
        "balance": "0x2",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x1dc200bf74a3e2b162740c13886e965a0aaad61d36be3b0b60f4f433fc9dd1ed",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "value true, gas limit 300000000": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": [
        {
          "address": "0xfffffffffffffffffffffffffffffffffffffffe",
          "topics": [
            "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
            "0x0000000000000000000000000000000000000000000000000000000000d00001",
            "0x0000000000000000000000000000000000000000000000000000000000bef000"
          ],
          "data": "0x0000000000000000000000000000000000000000000000000000000000000001"
        }
      ]
    },
    "gas": {
      "regular": 21818,
      "state": 0,
      "history": 34320,
      "history_bytes": 390,
      "reservoir_remaining": 99965680,
      "floor": 15000,
      "gas_used": 56138
    },
    "result_gas": {
      "total_gas_spent": 56138,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 99965680
    },
    "usage": {
      "data_size": 550,
      "write_records": 2
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": {
        "balance": "0x2",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x1dc200bf74a3e2b162740c13886e965a0aaad61d36be3b0b60f4f433fc9dd1ed",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  }
}
