crates/mega-evm/tests/satin/snapshots/satin__detention__a_read_answers_with_the_blocks_field.snap
---
source: crates/mega-evm/tests/satin/detention.rs
expression: "&OutcomeView::new(&run.outcome)"
---
{
  "result": {
    "kind": "success",
    "reason": "Stop",
    "output": "0x",
    "created": null,
    "logs": []
  },
  "gas": {
    "regular": 236172,
    "state": 979200,
    "history": 62480,
    "history_bytes": 710,
    "reservoir_remaining": 0,
    "floor": 15000,
    "gas_used": 1277852
  },
  "result_gas": {
    "total_gas_spent": 1277852,
    "state_gas_spent": 979200,
    "refunded": 0,
    "floor_gas": 15000,
    "reservoir_remaining": 0
  },
  "usage": {
    "data_size": 710,
    "write_records": 10
  },
  "limit_stop": null,
  "oracle_reads": [],
  "accounts": {
    "0x0000000000000000000000000000000000bef000": "unchanged",
    "0x0000000000000000000000000000000000d00000": {
      "balance": "0xe8d4919064",
      "nonce": 1,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x0000000000000000000000000000000000d00001": {
      "balance": "0x0",
      "nonce": 0,
      "code_hash": "0xe2c8b4327db5dfba6745a9b3a52fe1defeb229fb55a63fbefe46d02af43eb26f",
      "created": false,
      "selfdestructed": false,
      "storage": [
        {
          "slot": "0x0",
          "original": "0x0",
          "present": "0x12c"
        },
        {
          "slot": "0x1",
          "original": "0x0",
          "present": "0x6553f100"
        },
        {
          "slot": "0x2",
          "original": "0x0",
          "present": "0xbef000"
        },
        {
          "slot": "0x3",
          "original": "0x0",
          "present": "0x707070707070707070707070707070707070707070707070707070707070707"
        },
        {
          "slot": "0x4",
          "original": "0x0",
          "present": "0x2540be400"
        },
        {
          "slot": "0x5",
          "original": "0x0",
          "present": "0x1"
        },
        {
          "slot": "0x6",
          "original": "0x0",
          "present": "0x3"
        },
        {
          "slot": "0x7",
          "original": "0x0",
          "present": "0x9"
        },
        {
          "slot": "0x8",
          "original": "0x0",
          "present": "0x6386010079fe6c0a61983a014039529dafea55b2497abdb4d89ddfb4c1197408"
        },
        {
          "slot": "0x9",
          "original": "0x0",
          "present": "0x2a"
        }
      ]
    },
    "0x4200000000000000000000000000000000000019": {
      "balance": "0x137f9c",
      "nonce": 0,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x420000000000000000000000000000000000001a": "unchanged",
    "0x420000000000000000000000000000000000001b": "unchanged"
  }
}
